# local-office-search-api

./: .gitignore  .rubocop.yml  Dockerfile  Gemfile  Jenkinsfile  LICENSE  NOTICE  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  traefik.toml
.github/: dependabot.yml
.github/workflows/: cdk_diff.yml  db_migration.yml  deploy_stage.yml  dev_deploy.yml  lint_and_test.yml  prod_deploy.yml  sync_database.yml
app/controllers/: application_controller.rb  status_controller.rb
app/models/: local_authority.rb  office.rb  opening_times.rb  postcode.rb  served_area.rb
app/values/: timerange_type.rb
cdk/: README.md  app.py  pyproject.toml
cdk/app/: chart.py  local_office_search_api.py
cdk/infrastructure/: db.py  ecr.py  infrastructure_stack.py
config/: application.rb  brakeman.ignore  cable.yml  credentials.yml.enc  database.yml  puma.rb  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: datadog.rb  geojson.rb  rswag_ui.rb
db/: structure.sql
db/migrate/: 20230531135320_create_offices.rb  20230621151704_create_geo_data.rb  20230704120347_add_more_identifiers_to_offices.rb  20230705095742_add_local_authorities_to_offices.rb  (+8 more)
doc/: dependency_decisions.yml
docker/: default.env  dev.env  test.env
lib/: csv_helpers.rb  loader_helpers.rb  lss_loader.rb  office_search.rb  postcode_loader.rb  s3_loader.rb
spec/: lss_loader_spec.rb  office_search_spec.rb  postcode_loader_spec.rb  rails_helper.rb  spec_helper.rb  swagger_helper.rb
test/: test_helper.rb
(+87 files in other folders)
